--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile files('libs/gimbal.jar')
+    compile 'com.android.support:cardview-v7:23.0.1'
 }
